unique id checker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,6 @@ endif()
 project(university-db)
 enable_testing()
 
-add_executable(${PROJECT_NAME} main.cpp db.cpp)
+add_executable(${PROJECT_NAME} main.cpp db.cpp menu.cpp)
 
 
